--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "schema.graphql",
     "project.yaml"
   ],
-  "author": "sa",
+  "author": "ilia",
   "license": "Apache-2.0",
   "devDependencies": {
     "@polkadot/api": "^5.7.1",
